--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@types/node": "20.2.5",
     "@types/react": "18.2.9",
     "@types/react-dom": "18.2.4",
+    "dotenv": "^16.1.4",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
+    "moment": "^2.29.4",
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
