--- a/package.json
+++ b/package.json
@@ -12,17 +12,19 @@
     "@types/node": "20.2.5",
     "@types/react": "18.2.9",
     "@types/react-dom": "18.2.4",
+    "autoprefixer": "^10.4.14",
     "dotenv": "^16.1.4",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "moment": "^2.29.4",
     "next": "13.4.4",
+    "postcss": "^8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "styled-components": "^5.3.10",
+    "tailwindcss": "^3.3.2",
     "typescript": "5.1.3"
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.26"
+    "@types/tailwindcss": "^3.1.0"
   }
 }
