--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "^3.3.2",
+    "tweakpane": "^4.0.1",
     "typescript": "5.1.3"
   },
   "devDependencies": {
+    "@tweakpane/core": "^2.0.1",
     "@types/tailwindcss": "^3.1.0"
   }
 }
