--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.11",
     "@types/node": "20.2.5",
     "@types/react": "18.2.9",
     "@types/react-dom": "18.2.4",
@@ -20,6 +23,7 @@
     "next": "13.4.4",
     "postcss": "^8.4.24",
     "react": "18.2.0",
+    "react-currency-input-field": "^3.6.11",
     "react-dom": "18.2.0",
     "tailwindcss": "^3.3.2",
     "tweakpane": "^4.0.1",
