--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "20.2.5",
     "@types/react": "18.2.9",
     "@types/react-dom": "18.2.4",
+    "@vercel/analytics": "^1.0.2",
     "autoprefixer": "^10.4.14",
     "dotenv": "^16.1.4",
     "eslint": "8.42.0",
